# loqui

./: .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  SIGNING.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: electron-builder.yml  electron.vite.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/desktop/e2e/: app.e2e.ts
apps/desktop/native/macos/: Package.swift  README.md  build.sh
apps/desktop/scripts/: build-runtime.mjs  build-worklet.mjs
apps/desktop/src/main/: content-protection.test.ts  index.ts
apps/desktop/src/main/audio/: register.test.ts  register.ts
apps/desktop/src/main/autorecord/: browser-source.ts  decision.test.ts  decision.ts  detectors.test.ts  detectors.ts  engine.test.ts  engine.ts  index.ts  register.test.ts  register.ts  tray.test.ts  tray.ts
apps/desktop/src/main/branding/: appMenu.ts  trayIcon.ts
apps/desktop/src/main/calendar/: index.ts  oauth.test.ts  oauth.ts  providers.test.ts  providers.ts  register.ts  service.test.ts  service.ts  token-store.test.ts  token-store.ts  types.ts
apps/desktop/src/main/capture/: frame-queue.test.ts  frame-queue.ts  index.ts  loopback.test.ts  loopback.ts  native-system-capture.test.ts  native-system-capture.ts  orchestrator.test.ts  orchestrator.ts  perapp.test.ts  perapp.ts  permission.test.ts  permission.ts
apps/desktop/src/main/chat/: keystore.test.ts  keystore.ts  register.test.ts  register.ts
apps/desktop/src/main/export/: binary.ts  index.ts  model.ts  register.test.ts  register.ts  service.test.ts  service.ts  transforms.test.ts  transforms.ts
apps/desktop/src/main/import/: pipeline.test.ts  pipeline.ts
apps/desktop/src/main/ipc/: register.test.ts  register.ts
apps/desktop/src/main/mcp/: client-config.test.ts  client-config.ts  index.ts  lifecycle.test.ts  lifecycle.ts  register.test.ts  register.ts  snippets.ts
apps/desktop/src/main/notification/: register.ts  scheduler.test.ts  scheduler.ts  window.ts
apps/desktop/src/main/postprocess/: hf-keystore.test.ts  hf-keystore.ts  index.ts  pipeline.test.ts  pipeline.ts  register.test.ts  register.ts  render.test.ts  render.ts  retention.test.ts  writers.ts
apps/desktop/src/main/settings/: store.test.ts  store.ts
apps/desktop/src/main/sidecar/: backoff.test.ts  backoff.ts  client.test.ts  client.ts  handshake.test.ts  handshake.ts  launcher.test.ts  launcher.ts  supervisor.test.ts  supervisor.ts  ws.ts
apps/desktop/src/main/speakernames/: apply.test.ts  apply.ts  correlate.test.ts  correlate.ts  index.ts  register.test.ts  (+4 more)
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: App.test.tsx  App.tsx  index.html  main.tsx  notification.html  notification.tsx  styles.css
apps/desktop/src/shared/: ipc.ts
apps/extension/: README.md  package.json  tsconfig.json  vitest.config.ts
apps/extension/scripts/: build.ts
apps/extension/src/: content.ts  contract.test.ts  contract.ts  manifest.json  ws-client.test.ts  ws-client.ts
apps/extension/src/meet/: page.test.ts  page.ts  selectors.test.ts  selectors.ts  watcher.test.ts  watcher.ts
build-helpers/: update-helper.ps1  update-helper.sh
docs/contract/: FRONTEND-CONTRACT.md
docs/design/: DESIGN-SYSTEM.md
docs/prd/: PRD-0-foundation.md  PRD-1-audio-capture.md  PRD-10-ondevice-summaries.md  PRD-11-auto-record-menubar.md  PRD-12-file-import-voice-memo.md  PRD-13-export-privacy.md  PRD-14-notoken-diarization.md  PRD-15-calendar-home.md  PRD-16-ui-rehaul.md  PRD-2-transcription.md  PRD-3-transcript-store.md  PRD-4-ai-chat.md  PRD-5-diarization-summaries.md  PRD-6-speaker-names.md  PRD-7-mcp-server.md  PRD-8-packaging-updater.md  PRD-9-transcription-engines.md  ROADMAP.md
mcp-server/: package.json  tsconfig.json
mcp-server/src/: cli.test.ts  cli.ts  config-snippets.test.ts  config-snippets.ts  http.test.ts  http.ts  index.ts  server.ts
mcp-server/src/__fixtures__/: stdio-cli-entry.ts
mcp-server/src/tools/: index.ts
mcp-server/test/: seed.ts  store.test.ts  tools.test.ts
scripts/: gen-version-json.mjs  smoke-audio.mjs  smoke-calendar.mjs  smoke-calendar.ts  smoke-chat.mjs  smoke-foundation.mjs  smoke-import.mjs  smoke-mcp.mjs  smoke-meeting.mjs  smoke-meeting.ts  smoke-postprocess.mjs  smoke-speakernames.mjs  smoke-speakernames.ts  smoke-transcription.mjs
sidecar/: README.md  THIRD_PARTY_LICENSES.md  pyinstaller_entry.py  pyproject.toml
sidecar/loqui_sidecar/: __init__.py  __main__.py  app.py  audio_ingest.py  dedup.py  lang.py  schemas.py  server.py
sidecar/loqui_sidecar/file_import/: __init__.py  decode.py  importer.py
sidecar/loqui_sidecar/postprocess/: __init__.py  align.py  fake.py  pyannote_backend.py  request.py  retranscribe.py  runner.py  sherpa_backend.py  sherpa_models.py  sherpa_worker.py  summary.py  types.py  writers.py
sidecar/loqui_sidecar/providers/: __init__.py  agent_cli_provider.py  anthropic_provider.py  fake.py  handler.py  native_provider.py  ollama_provider.py  registry.py  transcript.py  types.py
sidecar/loqui_sidecar/transcription/: README.md  __init__.py  asr.py  asr_backend.py  engine_select.py  fake_backend.py  fake_stream.py  manager.py  native_backend.py  pipeline.py  streaming.py  types.py  vad.py  whisperlive_core.py  whisperlive_pipeline.py
sidecar/tests/: _client.py  _summary_helpers.py  conftest.py  test_alignment.py  test_apple_speech_real.py  test_asr_backend.py  test_asr_real_model.py  test_audio_ingest.py  test_chat.py  test_dedup.py  test_diarization.py  test_diarization_real.py  test_diarization_sherpa.py  test_diarization_sherpa_real.py  test_file_import.py  test_main_dispatch.py  test_native_provider.py  test_native_summary_real.py  test_pipeline.py  test_postprocess.py  test_provider_anthropic_real.py  test_providers.py  test_retranscribe.py  test_schemas.py  test_server.py  test_streaming_policy.py  test_summary_templates.py  test_transcription.py  test_transcription_engines.py  test_transcription_integration.py  test_vad.py  test_whisperlive.py
sidecar/tests/fixtures/: __init__.py
(+148 files in other folders)
