[project]
name = "loqui-sidecar"
version = "0.0.0"
description = "Loqui Python sidecar — FastAPI + WebSocket service for ML/audio-heavy work."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "jsonschema>=4.23.0",
]

[project.scripts]
loqui-sidecar = "loqui_sidecar.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loqui_sidecar"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
target-version = ["py311", "py312"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
