[project]
name = "loqui-sidecar"
version = "0.0.0"
description = "Loqui Python sidecar — FastAPI + WebSocket service for ML/audio-heavy work."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "jsonschema>=4.23.0",
    # PRD-2 transcription engine. faster-whisper (CTranslate2) is the real ASR
    # backend; numpy is used for PCM<->float buffer handling + the VAD/streaming
    # math. The default unit gate uses a FAKE AsrBackend and never imports
    # faster-whisper, so neither pulls in a model download at test time.
    "faster-whisper>=1.0.0",
    "numpy>=1.26.0",
    # PRD-4 AI chat provider abstraction. `anthropic` is the OFFICIAL SDK for the
    # BYOK provider (streaming via client.messages.stream, adaptive thinking);
    # `httpx` is the client for the Ollama provider (POST /api/chat, stream=true).
    # The default unit gate uses the FAKE chat provider and imports neither, so
    # the gate stays hermetic (no network/key/CLI). The agent-CLI provider shells
    # out to an installed `claude`/`codex` via subprocess (no extra dep).
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[project.scripts]
loqui-sidecar = "loqui_sidecar.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loqui_sidecar"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
target-version = ["py311", "py312"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
