[project]
name = "loqui-sidecar"
version = "0.0.0"
description = "Loqui Python sidecar — FastAPI + WebSocket service for ML/audio-heavy work."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "jsonschema>=4.23.0",
    # PRD-2 transcription engine. faster-whisper (CTranslate2) is the real ASR
    # backend; numpy is used for PCM<->float buffer handling + the VAD/streaming
    # math. The default unit gate uses a FAKE AsrBackend and never imports
    # faster-whisper, so neither pulls in a model download at test time.
    "faster-whisper>=1.0.0",
    # PRD-12 file import. PyAV (`av`) wraps ffmpeg's libav* to decode an existing
    # audio/video file (m4a/mp3/wav/mp4/mov/…) to the SAME 16 kHz mono pcm_s16le
    # the live capture path feeds the engine (its AudioResampler does the resample
    # + mono downmix). Already pulled transitively by faster-whisper; declared
    # explicitly here because the import decode path imports it directly.
    "av>=11.0.0",
    "numpy>=1.26.0",
    # PRD-4 AI chat provider abstraction. `anthropic` is the OFFICIAL SDK for the
    # BYOK provider (streaming via client.messages.stream, adaptive thinking);
    # `httpx` is the client for the Ollama provider (POST /api/chat, stream=true).
    # The default unit gate uses the FAKE chat provider and imports neither, so
    # the gate stays hermetic (no network/key/CLI). The agent-CLI provider shells
    # out to an installed `claude`/`codex` via subprocess (no extra dep).
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    # PRD-14 no-token local diarization. sherpa-onnx (k2-fsa) is the DEFAULT
    # speaker-diarization backend: Apache-2.0, lightweight, CPU-only, NO torch and
    # NO Hugging Face token/account (the ONNX models come from sherpa-onnx's own
    # non-gated GitHub releases). It stays in the BASE deps — unlike torch/pyannote
    # (the heavy optional `diarization` group below) — because it is small and the
    # no-token path is the default. The hermetic gate still uses the FAKE diarizer
    # and the SherpaOnnxDiarizer lazy-imports sherpa_onnx + resolves models from a
    # local cache (NO download at test time), so the gate never pulls a model.
    "sherpa-onnx>=1.10.0",
    # sherpa-onnx>=1.13 splits its native libraries into a companion
    # `sherpa-onnx-core` wheel (the bundled onnxruntime.dll + sherpa C/C++ API
    # DLLs live there). The `sherpa-onnx` wheel declares it as a dependency, but
    # uv's lock resolution reads the platform-agnostic sdist metadata, which does
    # NOT list it — so `uv sync` would otherwise UNINSTALL sherpa-onnx-core and
    # leave sherpa_onnx/lib/ with only the .pyd, no native libs. The .pyd then
    # falls back to whatever onnxruntime.dll is on the DLL path (an incompatible
    # one) and SEGFAULTS at OfflineSpeakerDiarization construction. Pinning the
    # core wheel explicitly keeps the bundled, ABI-matched native libs installed.
    "sherpa-onnx-core>=1.10.0",
    # onnxruntime is the native runtime shared by sherpa-onnx (PRD-14 diarization)
    # and faster-whisper (PRD-2 ASR, which itself imports it). sherpa-onnx's
    # prebuilt Windows wheel dynamically links the `onnxruntime.dll` from THIS
    # package, and its bundled C++ was built against onnxruntime ~1.17-1.20 — an
    # onnxruntime >= 1.21 (e.g. 1.27) raises a native flatbuffer-schema mismatch
    # ("The given version [24] is not supported, only version 1 to 10 …") that
    # SEGFAULTS the process at OfflineSpeakerDiarization construction (a C++ crash
    # the Python try/except in diarize() cannot catch). Pin onnxruntime to the
    # range sherpa-onnx 1.13.x is ABI-compatible with
    # (faster-whisper imposes no onnxruntime upper bound, so no conflict) so the
    # no-token diarizer actually loads.
    "onnxruntime>=1.17.0,<1.21.0",
]

[project.scripts]
loqui-sidecar = "loqui_sidecar.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
]
# PRD-5 diarization (OPTIONAL — NOT in the default sync). pyannote.audio 3.1 is
# the offline speaker-diarization backend (MIT, CPU-capable; Sortformer is
# excluded as it needs an NVIDIA GPU). torch is its heavy runtime. These are
# kept OUT of the base dependencies so the default `uv sync` stays lean and the
# hermetic test gate (FakeDiarizer) never pulls a multi-hundred-MB torch wheel
# or a gated model. The real PyannoteDiarizer lazy-imports torch + pyannote and
# degrades gracefully (diarization skipped, meeting still completes) when this
# group is not installed. Install explicitly for the opt-in real-diarization
# path: `uv sync --group diarization`.
diarization = [
    "torch>=2.2.0",
    "pyannote.audio>=3.1.0,<3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loqui_sidecar"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
target-version = ["py311", "py312"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
